Make sure my local config does not get checked in

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,6 @@ _testmain.go
 # Local project files for sublime text editor
 *.sublime-project
 *.sublime-workspace
+
+config/aws.conf
+config/base.conf
