--- a/config/aws.conf
+++ b/config/aws.conf
@@ -1,3 +1,3 @@
 [default]
-id=AKIAIPWU3X6SNWCRPJGA
-secret=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
+id=XXXXXXXXXXXXXXXXXXXX
+secret=XXXXXXXXXXXXXXXXXXXX
