Cleaned up implementation of registrar

--- a/config/aws.conf
+++ b/config/aws.conf
@@ -1,3 +1,14 @@
 [default]
-id=XXXXXXXXXXXXXXXXXXXX
-secret=XXXXXXXXXXXXXXXXXXXX
+id=XXXXXXXXXXXXXX
+secret=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+
+
+platform-applications=Test,Test2
+
+[Test]
+arn=arn:aws:sns:us-east-1:238699486533:app/GCM/Test
+region=us-east-1
+
+[Test2]
+arn=arn:aws:sns:us-east-1:238699486533:app/GCM/Test
+region=us-east-1
