--- a/config/aws.conf
+++ b/config/aws.conf
@@ -1,6 +1,6 @@
 [default]
-id=XXXXXXXXXXXXXX
-secret=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+id=XXXXXXXXXXXX
+secret=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 
 
 platform-applications=Test,Test2
@@ -8,7 +8,9 @@ platform-applications=Test,Test2
 [Test]
 arn=arn:aws:sns:us-east-1:238699486533:app/GCM/Test
 region=us-east-1
+type=GCM
 
 [Test2]
 arn=arn:aws:sns:us-east-1:238699486533:app/GCM/Test
 region=us-east-1
+type=GCM
