Updating the register device to save device metadata and arn too dynamo as well

--- a/config/aws.conf
+++ b/config/aws.conf
@@ -1,6 +1,6 @@
 [default]
-id=XXXXXXXXXXXX
-secret=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+id=XXXXXXXXXXXXXX
+secret=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 
 
 platform-applications=Test,Test2
@@ -9,8 +9,10 @@ platform-applications=Test,Test2
 arn=arn:aws:sns:us-east-1:238699486533:app/GCM/Test
 region=us-east-1
 type=GCM
+dynamo-table=gpns_device
 
 [Test2]
 arn=arn:aws:sns:us-east-1:238699486533:app/GCM/Test
 region=us-east-1
 type=GCM
+dynamo-table=gpns_device
