Implementing get Device, needed to move Region and dynamo table name config to root from application specific config

--- a/config/aws.conf
+++ b/config/aws.conf
@@ -1,18 +1,15 @@
 [default]
-id=XXXXXXXXXXXXXX
+id=XXXXXXXXXXXX
 secret=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 
-
+dynamo-table=gpns_device
+region=us-east-1
 platform-applications=Test,Test2
 
 [Test]
 arn=arn:aws:sns:us-east-1:238699486533:app/GCM/Test
-region=us-east-1
 type=GCM
-dynamo-table=gpns_device
 
 [Test2]
 arn=arn:aws:sns:us-east-1:238699486533:app/GCM/Test
-region=us-east-1
 type=GCM
-dynamo-table=gpns_device
