Autocreate dynamo table if missing

--- a/config/aws.conf
+++ b/config/aws.conf
@@ -3,6 +3,10 @@ id=XXXXXXXXXXXX
 secret=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 
 dynamo-table=gopns_device
+dynamo-read-capacity=1
+dynamo-write-capacity=1
+
+
 region=us-east-1
 platform-applications=Test,Test2
 
