Autocreate dynamo table if missing

--- a/config/aws.conf
+++ b/config/aws.conf
@@ -1,11 +1,10 @@
 [default]
-id=XXXXXXXXXXXX
-secret=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+id=XXXXXXXXXXXXX
+secret=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 
 dynamo-table=gopns_device
 dynamo-read-capacity=1
 dynamo-write-capacity=1
-
 
 region=us-east-1
 platform-applications=Test,Test2
