Updating sample config

--- a/config/aws.conf
+++ b/config/aws.conf
@@ -6,6 +6,8 @@ dynamo-table=gopns_device
 dynamo-read-capacity=1
 dynamo-write-capacity=1
 
+sqs-queue-name=push-queue
+
 region=us-east-1
 platform-applications=Test,Test2
 
