--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ go:
     1.2
 
 install:
-    go get github.com/gopns/gopns
-    go install github.com/gopns/gopns
+    - go get github.com/gopns/gopns
+    - go install github.com/gopns/gopns
 
 script: go test ./...
 
