--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,9 @@ go:
 
 install:
     - go get github.com/gopns/gopns
+    - go install code.google.com/p/gorest
+    - go get github.com/emicklei/go-restful
+    - go install github.com/emicklei/go-restful
     - go install github.com/gopns/gopns
 
 script: go test ./...
