--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ install:
 - go get github.com/emicklei/go-restful
 - go install github.com/emicklei/go-restful
 - go install github.com/gopns/gopns
-script: ./test-coverage.sh
+script: go list all | grep "cover"; ./test-coverage.sh
 notifications:
   email: 
   recipients:
