--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,9 @@ install:
 - go get github.com/emicklei/go-restful
 - go install github.com/emicklei/go-restful
 - go install github.com/gopns/gopns
-script: go list all | grep "cover"; ./test-coverage.sh
+- go install github.com/mattn/goveralls
+
+script: go test ./...
 notifications:
   email: 
   recipients:
